--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "discord-dynip",
-  "version": "1.0.0",
+  "version": "v1.0.0",
   "main": "src/main.js",
   "repository": "git@github.com:joanferrecid098/discord-dynip.git",
   "author": "joanferrecid098",
