--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -22,4 +22,4 @@ jobs:
         run: |
           docker login -u joanferrecid098 -p ${{ secrets.DOCKER_HUB_TOKEN }}
           docker push joanferrecid098/discord-dynip:latest
-          docker push joanferrecid098/discord-dynip:${{ github.event.release.tag_name }}
+          docker push joanferrecid098/discord-dynip:v1.1.0
